# nix-repository-manager

./: README  nix-repository-manager.cabal  nix-repository-manager.hs  nix_repository_manager.hs
src/: Common.hs  Implementations.hs  Main.hs  NixFile.hs  ProcessPool.hs  Repo.hs  Test.hs  Types.hs  Util.hs  Utils.hs
test-files/: test.nix
